fixed bug in the main table, it collapses properly

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,11 @@
 
  #main {
  }
+ 
+ .toggler{
+    height:auto;
+    width:600px;
+ }
 
  h1, p {
  	margin: 10px;
